Update of neutral files

--- a/amr/02-iea15-2WT/neutral/readme
+++ b/amr/02-iea15-2WT/neutral/readme
@@ -1,1 +1,3 @@
-have to restart this case. check with anesh the syntax. still have to create the restart input files. dont forget to add the proper checkpoint to the restart file
+i killed this job 130s before the end of the 1800-s period. I will use this as is.
+
+rthedin may 1 2023
