--- a/amr/ressources/03_LESinformedTurbsim_processLES.ipynb
+++ b/amr/ressources/03_LESinformedTurbsim_processLES.ipynb
@@ -1043,9 +1043,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "ssrs_env_scratch",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
-   "name": "ssrs_env_scratch"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -1057,7 +1057,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.5"
+   "version": "3.9.9"
   }
  },
  "nbformat": 4,
